--- a/css/admin.css
+++ b/css/admin.css
@@ -27,6 +27,7 @@ body {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 20px;
   font-weight: bold;
+  height: 605px;
 }
 .left nav ul {
   display: flex;
